[gd_scene load_steps=9 format=3 uid="uid://om2kpmy54aag"]

[ext_resource type="Script" uid="uid://6aqpuwgmnqb7" path="res://escenas/InterfazInicio.gd" id="1_6josf"]
[ext_resource type="Texture2D" uid="uid://ckprj3f4b177l" path="res://recursos/GUI/FONDOGUI.png" id="1_vlgqd"]
[ext_resource type="AudioStream" uid="uid://du7dcq4e2pndl" path="res://recursos/GUI/mouse-click.wav" id="2_srnpe"]
[ext_resource type="FontFile" uid="uid://0vhj38hf2e62" path="res://recursos/GUI/fuente_pixel.ttf" id="3_epy87"]
[ext_resource type="AudioStream" uid="uid://dotel8iqtmkxe" path="res://recursos/GUI/sound.wav" id="3_td17h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epy87"]
bg_color = Color(0.298039, 0.686275, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.931816, 0.929096, 0.999503, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ck52"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vw6l7"]
bg_color = Color(0.298039, 0.686275, 0.313726, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.930297, 0.794418, 0.0567836, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="InterfazInicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6josf")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vlgqd")

[node name="Titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_right = 113.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_epy87")
theme_override_font_sizes/font_size = 64
text = "SPACE GAME WAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContenedorBotones" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BotonJugar" type="Button" parent="ContenedorBotones"]
layout_mode = 2
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_epy87")
theme_override_styles/normal = SubResource("StyleBoxFlat_3ck52")
text = "Jugar"

[node name="BotonSalir" type="Button" parent="ContenedorBotones"]
layout_mode = 2
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_vw6l7")
text = "Salir"

[node name="ReproductorSonido" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_srnpe")

[node name="ReproductorMusica" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_td17h")
autoplay = true

[connection signal="pressed" from="ContenedorBotones/BotonJugar" to="." method="_on_BotonJugar_pressed"]
[connection signal="pressed" from="ContenedorBotones/BotonSalir" to="." method="_on_BotonSalir_pressed"]
